force-app/main/default/objects/Position__c/fields/iconimage__c.field-meta.xml
<CustomField>
    <fullName>iconimage__c</fullName>
    <formula>CASE( TEXT( Status__c ),
 &apos;New Position&apos;,IMAGE(&quot;/resource/check&quot;,&quot;Green&quot;,28,24),
&apos;Closed - Not Approved&apos;,IMAGE(&quot;/resource/redcircle&quot;,&quot;Red&quot;,28,24),
&apos;Closed - Canceled&apos;,IMAGE(&quot;/resource/redcircle&quot;,&quot;Red&quot;,28,24),
&apos;Closed - Filled&apos;,IMAGE(&quot;/resource/redcircle&quot;,&quot;Red&quot;,28,24)

,&apos;No Image Available&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>iconimage</label>
    <type>Text</type>
</CustomField>