force-app/main/default/objects/Position__c/validationRules/Close_date_after_open_date.validationRule-meta.xml
<ValidationRule>
    <fullName>Close_date_after_open_date</fullName>
    <active>true</active>
    <description>Closed date should be greater than open date</description>
    <errorConditionFormula>Close_Date__c  &lt;  Open_Date__c</errorConditionFormula>
    <errorMessage>Close date cannot be before open date</errorMessage>
</ValidationRule>