force-app/main/default/objects/Position__c/validationRules/Max_pay.validationRule-meta.xml
<ValidationRule>
    <fullName>Max_pay</fullName>
    <active>true</active>
    <description>Max Pax should not be greater than 1M</description>
    <errorConditionFormula>Max_Pay__c  &gt; 1000000</errorConditionFormula>
    <errorDisplayField>Max_Pay__c</errorDisplayField>
    <errorMessage>Max Pay cannot be greater than 1 million</errorMessage>
</ValidationRule>