force-app/main/default/objects/Position__c/validationRules/Max_pay_greater_than_min_pay.validationRule-meta.xml
<ValidationRule>
    <fullName>Max_pay_greater_than_min_pay</fullName>
    <active>true</active>
    <errorConditionFormula>Min_Pay__c   &gt;  Max_Pay__c</errorConditionFormula>
    <errorMessage>MIn Pay cannot be greater than Max Pay</errorMessage>
</ValidationRule>